# Rede_Labs

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  Dockerfile  GREEN_AGENT_DOCUMENTATION.md  HOW_TO_START_BATTLE.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  REPOSITORY_SETUP_GUIDE.md  SETUP_COMPLETE.md  alembic.ini  deploy_backend.sh  docker-compose.yml  launch_battle.sh  pyproject.toml  requirements.txt  run.py  scenario.toml  start_battle.sh  test_integration.sh
agents/: battle_logger.py  green_agent_tools.py  persona_brand_conscious.toml  persona_hedonistic_shopper.toml  persona_price_conscious.toml  persona_quality_seeker.toml  simulation_config.toml  simulation_config_loader.py  white_agent_card.toml
agents/buyer/: PERSONAS_README.md  persona_brand_conscious.toml  persona_brand_conscious.toml.old  persona_brand_prestige_seeker.toml  persona_confused_overchoice.toml  (+18 more)
alembic/: env.py
app/: config.py  database.py  logging.py  main.py
customer_agents/: __init__.py  shared_tools.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BATTLE_GUIDE.md
green_agent/: README.md  __init__.py  green_agent_card.toml  tools.py
images/: README.md  create_image_descriptions.py
marketplace_api/: __init__.py  main.py  requirements.txt
tests/: conftest.py  test_admin.py  test_buyers.py  test_images.py  test_integration.py  test_organizations.py  test_products.py  test_purchases.py  test_rankings.py  test_search.py  test_sellers.py
tools/: README.md  kill_agents.py  reset_remote_db.sql  start_agents.py
white_agents/: __init__.py  shared_tools.py
(+134 files in other folders)
